[tool.poetry]
name = "blog"
version = "0.1.0"
description = "fgebhart's Blog"
authors = ["Fabian Gebhart <16943048+fgebhart@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs-material = "^8.5.0"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
